--- a/recovery/root/init.recovery.mt8163.rc
+++ b/recovery/root/init.recovery.mt8163.rc
@@ -1,7 +1,17 @@
+import /init.recovery.usb.mt8163.rc
+
+on init
+    mount configfs none /config nodev noexec nosuid
+    chmod 0770 /config/sdcardfs
+    chown system package_info /config/sdcardfs
+
 on boot
-    exec /sbin/sh /amonet-fixup.sh
+    exec u:r:su:s0 root root -- /sbin/sh /amonet-fixup.sh
+    setprop sys.usb.ffs.aio_compat 1
 
 on fs
+    symlink /dev/block/platform/mtk-msdc.0/11230000.MSDC0 /dev/block/platform/bootdevice
+    symlink /dev/block/platform/soc/11230000.mmc/by-name /dev/block/platform/soc
     symlink /dev/block/platform/soc /dev/block/platform/mtk-msdc.0
 
 # This is for preloader update
@@ -10,3 +20,4 @@ on property:amonet.preloader=rw
 
 on property:amonet.preloader=ro
     write /sys/block/mmcblk0boot0/force_ro 1
+
